--- a/tinker/e_announcements/templates/form.html
+++ b/tinker/e_announcements/templates/form.html
@@ -207,7 +207,7 @@
                     // MLK Day - 3rd monday in jan
                     else if( date.getMonth() == 0 && date.getDay() == 1 && Math.ceil(date.getDate()/7) == 3 )
                         return true;
-{#                    // Easter (is the date the friday before easter)
+                    // Easter (is the date the friday before easter)
                     else if( isDateFridayBeforeEaster(date) )
                         return true;
                     // memorial day - last monday in may (may, date is after 24th and its a monday)
