--- a/tinker/events/templates/submit-confirm.html
+++ b/tinker/events/templates/submit-confirm.html
@@ -28,7 +28,7 @@
                     Take a short break in your day and enjoy this GIF!
                 </p>
                 <p>
-                    <img src="//cdn1.bethel.edu/gif/penguins.gif"/>
+                    <img src="//cdn1.bethel.edu/gif/tinker-events.gif"/>
                 </p>
 
             </div>
