--- a/tinker/templates/error/503.html
+++ b/tinker/templates/error/503.html
@@ -1,42 +1,54 @@
 {% extends "tinker_base.html" %}
 
-{% block title  %} Whoops {% endblock %}
+{% block title %} Whoops {% endblock %}
 
 {% block main_content %}
 
-   <div class="row">
+    <div class="row">
 
-    <section id="oops">
-      <div class="row">
-        <div class="large-9 medium-9 small-12 columns small-centered">
-          <h1 class="oversized">Whoops! Tinker lost its connection.</h1>
-          <h5>We're fixing the loose wire right now. Check back soon!</h5>
-        </div>
-      </div>
-     </section>
-   </div>
+        <section id="oops">
+            <div class="row">
+                <div class="large-9 medium-9 small-12 columns small-centered">
+                    <h1 class="oversized">Whoops! Tinker lost its connection.</h1>
+                    <h5>We’re fixing the loose wire right now. Check back soon!</h5>
+                </div>
+            </div>
+            <!-- Sentry JS SDK 2.1.+ required -->
+            <script src="https://cdn.ravenjs.com/2.3.0/raven.min.js"></script>
+
+            {% if sentry_event_id %}
+                <script>
+                    Raven.showReportDialog({
+                        eventId: '{{ sentry_event_id }}',
+                        dsn: '{{ public_dsn }}'
+                    });
+                </script>
+            {% endif %}
+        </section>
+    </div>
 {% endblock %}
 
 {% block head_add %}
 
-  <style>
+    <style>
 
-   .button-group>li>.button-nav {
-     background-color: #0069AA;
-   }
-   .button-group>li>.button-nav:hover {
-     background-color: #0F2C52;
-   }
+        .button-group > li > .button-nav {
+            background-color: #0069AA;
+        }
 
-    .button.small, .button.small.success, .button.tiny, .button.postfix, .input.postfix{
-      background-color: #0069AA;
-    }
+        .button-group > li > .button-nav:hover {
+            background-color: #0F2C52;
+        }
 
-    .button.small:hover, .button.small.success:hover, .button.tiny:hover, .button.postfix:hover{
-      background-color: #0F2C52;
-    }
+        .button.small, .button.small.success, .button.tiny, .button.postfix, .input.postfix {
+            background-color: #0069AA;
+        }
 
-  </style>
+        .button.small:hover, .button.small.success:hover, .button.tiny:hover, .button.postfix:hover {
+            background-color: #0F2C52;
+        }
+
+    </style>
 
 
 {% endblock %}
