--- a/tinker/events/templates/search_results.html
+++ b/tinker/events/templates/search_results.html
@@ -39,7 +39,7 @@
 {% block main_content %}
     <div class="content">
         <h2>{{ formsHeader }}</h2>
-        {% if dumvar.len() > 0 %}
+        {% if dumvar is defined  %}
             {% for form in dumVar %}
                 <br/>
                 {{ form_card(form) }}
