Fixed "User Events" not displaying for regular user
Since a regular user only has there own events to pick from, and the
loop qualifier was set to not show loop.last, a second qualifier had to
be added to make that true

--- a/tinker/events/templates/events-home.html
+++ b/tinker/events/templates/events-home.html
@@ -32,7 +32,7 @@
                             <select class="horizontal-scroll" size="{{ all_schools|length }}" id="school-selector"
                                     multiple>
                                 {% for school_code, school in all_schools.items() %}
-                                    {% if not loop.last %}
+                                    {% if loop.first or not loop.last %}
                                         <option value="{{ school_code}}"
                                                 selected="selected">{{ school }}</option>
                                     {%  endif %}
