--- a/tinker/events/templates/search_results.html
+++ b/tinker/events/templates/search_results.html
@@ -39,7 +39,7 @@
 {% block main_content %}
     <div class="content">
         <h2>{{ formsHeader }}</h2>
-        {% if list_of_events is defined %}
+        {% if list_of_events is defined and list_of_events | length > 0 %}
             {% for form in list_of_events %}
                 <br/>
                 {{ form_card(form) }}
