Functionality added to search
Made title matching work with all lower case, the events now show dates
when loaded, multi dates are split down and looped through now, and
data that is “Basic” is no longer included in the search

--- a/tinker/events/templates/events-home.html
+++ b/tinker/events/templates/events-home.html
@@ -121,7 +121,10 @@
                 format: 'MM DD YYYY',
                 minDate: new Date('2000-01-01'),
                 maxDate: new Date('2040-12-31'),
-                yearRange: [2000, 2040]
+                yearRange: [2000, 2040],
+{#                disableDayFn: function (date) {#}
+{#                    #}
+{#                }#}
             };
 
             // if its the startDate, set default date to today
